Add locations to openapi.yaml Refactor types in own package
